--- a/fm/src/app/header/header.component.html
+++ b/fm/src/app/header/header.component.html
@@ -2,7 +2,7 @@
   <h1><img src="../../assets/images/Screenshot 2024-05-29 114456.png" alt="">CAREERS</h1>
   <h5><i class="fa-solid fa-user"></i>Pravin</h5>
 </header>
-<h2>Update Profile</h2>
+<h2>Update Profile</h2>s
 <div class="container mt-4">
   <nav class="nav nav-pills mb-4">
     <li class="nav-item">
