--- a/fm/src/styles.scss
+++ b/fm/src/styles.scss
@@ -5,7 +5,7 @@
 @import 'ag-grid-community/styles/ag-theme-quartz.css';
 
 
-body{
-  background-color:#e4ebed;
+body {
+  font-family: 'Open Sans', sans-serif;
+  line-height:25px;
 }
-
