Added personalDataForm component and Updated the routing to this component into the Home page

--- a/fm/src/app/app.component.html
+++ b/fm/src/app/app.component.html
@@ -58,5 +58,15 @@
     </div>
   </div>
   <div class="footer"></div>
+  <div class="link">
+    <div class="content">
+      <div class="icon">
+        <!-- SVG content -->
+      </div>
+      <div class="title">personalDataForm</div>
+    </div>
+  </div>
 </div>
+<div class="footer"></div>
+
 <router-outlet></router-outlet>
