--- a/fm/src/app/header/header.component.html
+++ b/fm/src/app/header/header.component.html
@@ -20,6 +20,9 @@
     <li class="nav-item">
       <a class="nav-link" routerLink="/details" routerLinkActive="active"><i class="fa-solid fa-circle"></i>Deatils</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/personalDataForm" routerLinkActive="active"><i class="fa-solid fa-circle"></i>PersonalDataForm</a>
+    </li>
   </nav>
   <hr>
   <div [@routeAnimations]="prepareRoute(outlet)">
