changes in calender

--- a/fm/src/app/app.component.html
+++ b/fm/src/app/app.component.html
@@ -19,7 +19,7 @@
         <div class="icon">
           <!-- SVG content -->
         </div>
-        <div class="title">Configuration</div>
+        <div class="title" (click)="navigatecalendar()">calendar</div>
       </div>
       <div class="children">
         <div class="link">
