--- a/fm/src/styles.scss
+++ b/fm/src/styles.scss
@@ -9,3 +9,9 @@ body {
   font-family: 'Open Sans', sans-serif;
   line-height:25px;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
