--- a/fm/src/app/new-hires-card/edit-employee/edit-employee.component.html
+++ b/fm/src/app/new-hires-card/edit-employee/edit-employee.component.html
@@ -2,8 +2,8 @@
   <h3>Edit Employee</h3>
   <form [formGroup]="employeeForm" (ngSubmit)="onSubmit()">
     <div>
-      <label for="name">Name:</label>
-      <input id="name" formControlName="name" />
+      <label for="employeeName">Name:</label>
+      <input id="employeeName" formControlName="employeeName" />
     </div>
     <div>
       <label for="joinDate">Join Date:</label>
