--- a/fm/src/app/new-hires-card/employee-details/employee-details.component.html
+++ b/fm/src/app/new-hires-card/employee-details/employee-details.component.html
@@ -1,37 +1,20 @@
-<!-- <div *ngIf="employee; else noEmployee">
-    <ng-container *ngIf="!isEditing">
-      <h3>{{employee.name}}</h3>
-      <p>Joined on: {{employee.joinDate | date:'longDate'}}</p>
-      <button class="edit" (click)="startEdit()">Edit</button>
-      <button class="delete" (click)="deleteEmployee()">Delete</button>
-    </ng-container>
-    
-    <ng-container *ngIf="isEditing">
-      <app-edit-employee [employee]="employee" (cancel)="cancelEdit()" (save)="saveEmployee($event)"></app-edit-employee>
-    </ng-container>
-  </div>
-  
-  <ng-template #noEmployee>
-    <p>Employee not found.</p>
-  </ng-template>
-   -->
+<div *ngIf="employee; else noEmployee">
+  <h3>{{ employee?.employeeName }}</h3>
+  <p>Joined on: {{ employee?.joinDate | date:'longDate' }}</p>
+  <button class="edit" (click)="startEdit()">Edit</button>
+  <button class="delete" (click)="deleteEmployee()">Delete</button>
+</div>
 
-   <div *ngIf="employee; else noEmployee">
-    <h3>{{employee.name}}</h3>
-    <p>Joined on: {{employee.joinDate | date:'longDate'}}</p>
-    <button class="edit" (click)="startEdit()">Edit</button>
-    <button class="delete" (click)="deleteEmployee()">Delete</button>
-  </div>
-  <ng-template #noEmployee>
-    <p>Employee not found.</p>
-  </ng-template>
-  
-  <!-- Conditionally display the edit form -->
-  <div *ngIf="isEditing">
-    <app-edit-employee
-      [employee]="employee"
-      (cancel)="cancelEdit()"
-      (save)="saveEmployee($event)"
-    ></app-edit-employee>
-  </div>
-  
+<!-- Template for when no employee is found -->
+<ng-template #noEmployee>
+  <p>Employee not found.</p>
+</ng-template>
+
+<!-- Conditionally display the edit form -->
+<div *ngIf="isEditing">
+  <app-edit-employee
+    [employee]="employee"
+    (cancel)="cancelEdit()"
+    (save)="saveEmployee($event)"
+  ></app-edit-employee>
+</div>
