--- a/fm/src/app/leave-reportees/leave-reportees.component.html
+++ b/fm/src/app/leave-reportees/leave-reportees.component.html
@@ -7,9 +7,7 @@
 
 <div [ngClass]="{ 'grid-container': isGridView, 'list-container': !isGridView }">
   <div *ngFor="let employee of employees" [ngClass]="{ 'grid-item': isGridView, 'list-item': !isGridView }">
-
     <div class="icons">
-      <!-- Outer button for the phone icon -->
       <button mat-icon-button class="phone-icon" (click)="toggleOptions(employee.employeeId)">
         📞
       </button>
@@ -19,12 +17,11 @@
         <button mat-menu-item (click)="videoCall(employee.employeeId)">Video Call</button>
       </div>
     </div>
-    
 
     <img [src]="employee.profilePicture" alt="Profile Picture">
     <div>{{ employee.employeeName }}</div>
     <div>Leave booked this year: {{ employee.leaveBooked }}</div>
-    <div>General: {{ employee.generalTimining }}</div>
+    <div>General Timing: {{ employee.generalTimining }}</div>
     <div class="status">
       <span [ngClass]="employee.status">{{ employee.status }}</span>
     </div>
