--- a/fm/src/app/header/header.component.html
+++ b/fm/src/app/header/header.component.html
@@ -12,7 +12,7 @@
       <a class="nav-link" routerLink="/educational" routerLinkActive="active"><i class="fa-solid fa-circle"></i>Educational</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" routerLink="/skillset" routerLinkActive="active"><i class="fa-solid fa-square-check"></i>Skillset</a>
+      <a class="nav-link" routerLink="/skillset" routerLinkActive="active"><i class="fa-solid fa-circle"></i>Skillset</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" routerLink="/professional" routerLinkActive="active"><i class="fa-solid fa-circle"></i>Professional</a>
