--- a/fm/src/app/header/header.component.scss
+++ b/fm/src/app/header/header.component.scss
@@ -1,5 +1,5 @@
 .head{
-  background-color: #30a3bf;
+  background-color: #1e3c72;
 }
 img{
   border-radius: 27px;
@@ -15,13 +15,15 @@ h1{
 .mt-4{
   margin-right: 19rem;
   background-color: white;
-  width: 70%;
+  // width: 70%;
 }
 a{
   color: black;
 }
 .nav-item {
   margin-right: 30px;
+  background-color: darkseagreen;
+  border-radius: 10px;
 }
 .fa-user{
   padding: 8px;
@@ -42,7 +44,7 @@ a{
   color:#4ba2bf ;
 }
 h2{
-  margin-left: 17rem;
+  // margin-left: 17rem;
   margin-top: 1rem;
 }
 .nav-pills .nav-link.active {
@@ -69,4 +71,7 @@ h2{
 .nav-link.active {
   background-color: #007bff;
   color: white;
+}
+.fa-solid{
+  color:rgb(247,140,45)
 }
