--- a/fm/src/app/leave-tracking/leave-tracking.component.scss
+++ b/fm/src/app/leave-tracking/leave-tracking.component.scss
@@ -4,10 +4,11 @@
     flex-direction: row;
     justify-content: flex-start;
     background: linear-gradient(90deg, #1e3c72, #2a5298); /* Gradient background */
-    padding: 0.5rem 10rem;
+    padding: 0.5rem 25rem;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
     background-size: cover;
     border-bottom: 3px solid #123; /* Darker border for a more defined look */
+    border-radius: 10px;
   }
 
   .nav-item {
@@ -17,6 +18,7 @@
     font-weight: bold;
     position: relative;
     transition: color 0.3s, background-color 0.3s; /* Smooth transitions */
+    border-radius: 10px;
   }
 
   .nav-item::after {
@@ -65,4 +67,24 @@
       padding: 0.5rem 1rem;
       width: 100%;
     }
+  }
+
+  .breadcrumb {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    background: linear-gradient(90deg, #1e3c72, #2a5298); /* Gradient background */
+    padding: 0.5rem 1rem;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
+    background-size: cover;
+    border-radius: 10px;
+    border-bottom: 3px solid #123; /* Darker border for a more defined look */
+  }
+
+  .breadcrumb-item {
+    cursor: pointer;
+    color: #f9f9f9;
+    font-weight: bold;
+    position: relative;
+    transition: color 0.3s, background-color 0.3s; /* Smooth transitions */
   }
