--- a/fm/src/app/teams/teams.component.html
+++ b/fm/src/app/teams/teams.component.html
@@ -4,8 +4,11 @@
   <div class="nav-item" [class.active]="activeNavItem === 'approval-leave-request'" (click)="navigateToLeaveRequest()">Leave Request</div>
 </nav>
 
-<app-leave-reportees *ngIf="activeNavItem === 'leave-reportees'"></app-leave-reportees>
-<app-onleave *ngIf="activeNavItem === 'on-leave'"></app-onleave>
-<app-approval-leave-request *ngIf="activeNavItem === 'approval-leave-request'"></app-approval-leave-request>
+<div class="main-content">
+  <app-leave-reportees *ngIf="activeNavItem === 'leave-reportees'"></app-leave-reportees>
+  <app-onleave *ngIf="activeNavItem === 'on-leave'"></app-onleave>
+  <app-approval-leave-request *ngIf="activeNavItem === 'approval-leave-request'"></app-approval-leave-request>
+</div>
+
 
 <!-- <router-outlet></router-outlet> -->
