--- a/fm/src/app/app.component.html
+++ b/fm/src/app/app.component.html
@@ -8,7 +8,7 @@
     </div>
     <div class="content">
       <div class="link" (click)="headerNavigate()">
-        <div class="content">
+        <div>
           <div class="icon">
             <!-- SVG content -->
           </div>
@@ -25,12 +25,12 @@
       </div>
     </div>
     <div class="link with-children">
-      <div class="content">
+      <!-- <div class="content">
         <div class="icon">
-          <!-- SVG content -->
+          SVG content
         </div>
         <div class="title">Configuration</div>
-      </div>
+      </div> -->
       <div class="children">
         <div class="link">
           <div class="content">
@@ -77,7 +77,7 @@
         </div>
       </div>
     </div>
-    <div class="footer"></div>
+    <!-- <div class="footer"></div> -->
   </div>
   <div class="main-content" style="width: 100%;">
     <!-- {{"test"}} -->
