--- a/fm/src/app/app.component.scss
+++ b/fm/src/app/app.component.scss
@@ -16,7 +16,7 @@ body {
 .sidebar {
   width: 100px;
   min-width: 280px;
-  background-color: #333;
+  background-color:#1e3c72;
   color: #fff;
   transition: width 0.3s ease;
   overflow-y: auto;
@@ -50,7 +50,7 @@ body {
 }
 
 .content:hover {
-  background-color: #555;
+  background-color:sandybrown;
 }
 
 .link.with-children .children {
@@ -87,7 +87,7 @@ body {
 
 /* Customization */
 .title {
-  color: #ff9900; /* Adjust to your brand color */
+  color: white; /* Adjust to your brand color */
 }
 
 .footer {
