--- a/fm/src/app/new-home/new-home.component.html
+++ b/fm/src/app/new-home/new-home.component.html
@@ -1,10 +1,17 @@
+<!-- Breadcrumb -->
+<nav class="breadcrumb">
+  <span class="breadcrumb-item" *ngIf="activeNavItem === 'my-space'">New Home > My Space > {{ activeSubNavItem }}</span>
+  <span class="breadcrumb-item" *ngIf="activeNavItem === 'teams-dashboard'">New Home > Teams > {{ activeSubNavItem }}</span>
+  <span class="breadcrumb-item" *ngIf="activeNavItem === 'organization'">New Home > Organization</span>
+</nav>
 
+<!-- Navbar -->
 <nav class="navbar">
-    <div class="nav-item" [class.active]="activeNavItem === 'my-space'" (click)="navigateToMySpace()">My Space</div>
-    <div class="nav-item" [class.active]="activeNavItem === 'teams'" (click)="teamsDashboardNavigate()">Teams</div>
-    <div class="nav-item" [class.active]="activeNavItem === 'organization'" (click)="navigateToOrganization()">Organization</div>
-  </nav>
-  <app-home-my-data *ngIf="activeNavItem === 'my-space'"></app-home-my-data>
-  <app-teams-dashboard *ngIf="activeNavItem === 'teams-dashboard'"></app-teams-dashboard>
-  <app-organization *ngIf="activeNavItem === 'organization'"></app-organization>
-  
+  <div class="nav-item" [class.active]="activeNavItem === 'my-space'" (click)="navigateToMySpace()">My Space</div>
+  <div class="nav-item" [class.active]="activeNavItem === 'teams-dashboard'" (click)="teamsDashboardNavigate()">Teams</div>
+  <div class="nav-item" [class.active]="activeNavItem === 'organization'" (click)="navigateToOrganization()">Organization</div>
+</nav>
+
+<app-home-my-data *ngIf="activeNavItem === 'my-space'" (subNavChange)="updateBreadcrumb($event)"></app-home-my-data>
+<app-teams-dashboard *ngIf="activeNavItem === 'teams-dashboard'" (subNavChange)="updateBreadcrumb($event)"></app-teams-dashboard>
+<app-organization *ngIf="activeNavItem === 'organization'"></app-organization>
