--- a/fm/src/app/teams-dashboard/teams-dashboard.component.scss
+++ b/fm/src/app/teams-dashboard/teams-dashboard.component.scss
@@ -16,6 +16,7 @@
   color: #f9f9f9;
   font-weight: bold;
   position: relative;
+  border-radius: 10px;
   transition: color 0.3s, background-color 0.3s; /* Smooth transitions */
 }
 
