--- a/fm/src/app/team-department/team-department.component.html
+++ b/fm/src/app/team-department/team-department.component.html
@@ -1,1 +1,30 @@
-<p>team-department works!</p>
+<div class="team-dept-container">
+  <!-- Dropdown for selecting sections -->
+  <div class="card">
+    <select [(ngModel)]="selectedOptionId">
+      <option [value]="0">All</option>
+
+      <div class="member-count">{{ options.length }}</div>
+      <option *ngFor="let option of options" [value]="option.id">{{ option.option }}</option>
+    </select>
+  </div>
+
+  <!-- Display sections based on selection -->
+   <div>
+    <ng-container *ngFor="let section of getFilteredSections()">
+      <div class="team-overview" >
+        <div class="card">
+          <h3>{{ section.name }}</h3>
+          <div class="card">
+
+            <img src="path/to/default-avatar.png" alt="Avatar" class="avatar">
+            <span>{{ section.id }} - {{ section.details }}</span>
+            <!-- <span class="status" [ngClass]="{'leave': section.i === 'Leave', 'present': section.status === 'Present'}">{{ section.status }}</span> -->
+            <!-- <p>{{ section.details }}</p> -->
+          </div>
+        </div>
+      </div>
+    </ng-container>
+   </div>
+
+</div>
